syntax = "proto3";

package product_service;
option go_package = "github.com/Likhon22/ecom_microservice/product_service/proto/gen;productpb";
import "validate/validate.proto";
import "google/api/annotations.proto";

service ProductService {
rpc CreateProduct(CreateProductRequest) returns (StandardResponse) {
        option (google.api.http) = {
            post: "/products"
            body: "*"
        };
    }
rpc GetProduct (GetProductsRequest) returns (StandardResponse){
        option (google.api.http) = {
            get: "/products"
         };

   }
rpc GetProductById(GetProductByIdRequest) returns (StandardResponse) {
        option (google.api.http) = {
            get: "/products/{category}/{product_id}"
        };
    }
rpc UpdateProduct(UpdateProductRequest) returns (StandardResponse) {
        option (google.api.http) = {
            patch: "/products/{category}/{product_id}"
            body: "*"
        };
    }
 rpc DeleteProduct (DeleteProductRequest) returns (StandardResponse) {
 
       option (google.api.http)={
 
        delete: "/products/{category}/{product_id}"
   
   };
 
 }  
   
}


message CreateProductRequest {
    string name = 1 [(validate.rules).string.min_len = 1, (validate.rules).string.max_len = 100];
    string description = 2 [(validate.rules).string.min_len = 1, (validate.rules).string.max_len = 500];
    string category = 3 [(validate.rules).string.min_len = 1, (validate.rules).string.max_len = 50];
    double price = 4 [(validate.rules).double.gt = 0];
    repeated string image_urls = 5 [(validate.rules).repeated.items.string.max_len = 200];
    string status = 6;
    bool is_featured = 7;
    repeated string tags = 8 [(validate.rules).repeated.items.string.max_len = 30];
}

message CreateProductResponse {
    string product_id = 1;
    string name = 2;
    string description = 3;
    string category = 4;
    double price = 5;
    repeated string image_urls = 6;
    string status = 7;
    bool is_featured = 8;
    repeated string tags = 9;
    
}

message Product {
    string product_id = 1;
    string name = 2;
    string description = 3;
    string category = 4;
    double price = 5;
    repeated string image_urls = 6;
    string status = 7;
    bool is_featured = 8;
    repeated string tags = 9;
    string created_by = 10;
}
message GetProductsRequest {
    string category = 1;   
    string search = 2;       
       
}

message GetProductsResponse {
    repeated Product products = 1;
    int32 total_count = 2;   
   }

message GetProductByIdRequest {
  string category = 1;      
  string product_id = 2;
}

message GetProductByIdResponse {
    Product product = 1;
}


message UpdateProductRequest {

    string category = 1 [(validate.rules).string.min_len = 1];
    string product_id = 2 [(validate.rules).string.min_len = 1];
    
    // Optional update fields - IF PROVIDED, must be valid
    optional string name = 3 [(validate.rules).string = {min_len: 1, max_len: 100}];
    optional string description = 4 [(validate.rules).string = {max_len: 500}];
    optional string new_category = 5 [(validate.rules).string = {min_len: 1, max_len: 50}];
    optional double price = 6 [(validate.rules).double.gte = 0];
    optional bool is_featured = 7;
    repeated string tags = 8 [(validate.rules).repeated = {items: {string: {min_len: 1, max_len: 30}}}];
    repeated string image_urls = 9 [(validate.rules).repeated = {items: {string: {min_len: 1, max_len: 200}}}];
    optional string status = 10 [(validate.rules).string = {min_len: 1}];
      
}
message UpdateProductResponse {
    string product_id = 1;
    string name = 2;
    string description = 3;
    string category = 4;
    double price = 5;
    repeated string image_urls = 6;
    string status = 7;
    bool is_featured = 8;
    repeated string tags = 9;
    string updated_at = 10; 
}

message DeleteProductRequest {
string product_id =1;
string category =2;
}
message DeleteProductResponse {
 Product product = 1;
}
message StandardResponse {
  bool success = 1;
  string message = 2;
  int32 status_code = 3;
  oneof result {
   CreateProductResponse product_data = 4;
   GetProductsResponse products=5;
   GetProductByIdResponse product = 6;
   UpdateProductResponse updatedProduct=7;
   DeleteProductResponse deleted_product=8;
    }
}